--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
         }
 
         #app {
+            display: inline-block;
             position: absolute;
-            width: 100%;
             top: 0;
             left: 0;
         }
