摄像机位置获取/监听 鼠标位置获取监听

--- a/public/index.html
+++ b/public/index.html
@@ -46,6 +46,7 @@
         <a class="card" href="/line">线条</a>
         <a class="card" href="/polyline">管线</a>
         <a class="card" href="/weather">天气</a>
+        <a class="card" href="/view">坐标显示</a>
     </div>
 </body>
 
