自定义星空背景接口

--- a/public/index.html
+++ b/public/index.html
@@ -47,6 +47,7 @@
         <a class="card" href="/polyline">管线</a>
         <a class="card" href="/weather">天气</a>
         <a class="card" href="/view">坐标显示</a>
+        <a class="card" href="/sky">背景图</a>
     </div>
 </body>
 
