--- a/public/index.html
+++ b/public/index.html
@@ -48,6 +48,7 @@
         <a class="card" href="/weather">天气</a>
         <a class="card" href="/view">坐标显示</a>
         <a class="card" href="/sky">背景图</a>
+        <a class="card" href="/stallite">卫星</a>
     </div>
 </body>
 
