--- a/public/index.html
+++ b/public/index.html
@@ -1,55 +1,67 @@
+<!--
+ * @Author: R10
+ * @Date: 2022-05-31 15:41:36
+ * @LastEditTime: 2022-06-02 13:53:04
+ * @LastEditors: R10
+ * @Description: 
+ * @FilePath: /gismap/public/index.html
+-->
 <!DOCTYPE html>
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <!-- <script src="https://cdn.bootcss.com/vue/2.5.2/vue.min.js"></script> -->
-    <script src="/static/Cesium/Cesium.js"></script>
-    <!-- <script src="/static/xt3d.min.js"></script> -->
-    <link rel="stylesheet" href="/static/Cesium/Widgets/widgets.css">
-    </link>
-    <style>
-        body {
-            padding: 0;
-            margin: 0
-        }
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Document</title>
+  <!-- <script src="https://cdn.bootcss.com/vue/2.5.2/vue.min.js"></script> -->
+  <script src="/static/Cesium/Cesium.js"></script>
+  <!-- <script src="/static/xt3d.min.js"></script> -->
+  <link rel="stylesheet" href="/static/Cesium/Widgets/widgets.css">
+  </link>
+  <style>
+    body {
+      padding: 0;
+      margin: 0
+    }
 
-        #app {
-            width: 100%;
-            height: 100vh;
-            /* background: #09c; */
-            display: flex;
-            flex-direction: row;
-            flex-wrap: wrap;
-        }
+    #app {
+      width: 100%;
+      height: 100vh;
+      /* background: #09c; */
+      display: flex;
+      flex-direction: row;
+      align-items: flex-start;
+      padding: 15px;
+      flex-wrap: wrap;
+    }
 
-        .card {
-            margin: 0 20px 30px 0;
-            width: 300px;
-            height: 140px;
-            border: 1px solid #666666;
-            border-radius: 4px;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            text-decoration: none
-        }
-    </style>
+    .card {
+      align-self: flex-start;
+      margin: 0 20px 30px 0;
+      width: 300px;
+      height: 140px;
+      border: 1px solid #666666;
+      border-radius: 4px;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      text-decoration: none
+    }
+  </style>
 </head>
 
 <body>
-    <!-- <div id="cesium" style="width: 100vw;height: 100vh;"></div> -->
-    <div id="app">
-        <a class="card" href="/index">点</a>
-        <a class="card" href="/line">线条</a>
-        <a class="card" href="/polyline">管线</a>
-        <a class="card" href="/weather">天气</a>
-        <a class="card" href="/view">坐标显示</a>
-        <a class="card" href="/sky">背景图</a>
-        <a class="card" href="/stallite">卫星</a>
-    </div>
+  <!-- <div id="cesium" style="width: 100vw;height: 100vh;"></div> -->
+  <div id="app">
+    <a class="card" href="/index">点</a>
+    <a class="card" href="/line">线条</a>
+    <a class="card" href="/shape">形状</a>
+    <a class="card" href="/polyline">管线</a>
+    <a class="card" href="/weather">天气</a>
+    <a class="card" href="/view">坐标显示</a>
+    <a class="card" href="/sky">背景图</a>
+    <a class="card" href="/stallite">卫星</a>
+  </div>
 </body>
 
 </html>
