--- a/public/index.html
+++ b/public/index.html
@@ -58,6 +58,7 @@
     <a class="card" href="/shape">形状</a>
     <a class="card" href="/polyline">管线</a>
     <a class="card" href="/weather">天气</a>
+    <a class="card" href="/paint">基础绘制</a>
     <a class="card" href="/view">坐标显示</a>
     <a class="card" href="/sky">背景图</a>
     <a class="card" href="/stallite">卫星</a>
