--- a/public/index.html
+++ b/public/index.html
@@ -1,7 +1,7 @@
 <!--
  * @Author: R10
  * @Date: 2022-05-31 15:41:36
- * @LastEditTime: 2022-06-02 13:53:04
+ * @LastEditTime: 2022-06-13 14:30:20
  * @LastEditors: R10
  * @Description: 
  * @FilePath: /gismap/public/index.html
@@ -56,6 +56,7 @@
     <a class="card" href="/index">点</a>
     <a class="card" href="/line">线条</a>
     <a class="card" href="/shape">形状</a>
+    <a class="card" href="/paint">鼠标绘图</a>
     <a class="card" href="/polyline">管线</a>
     <a class="card" href="/weather">天气</a>
     <a class="card" href="/paint">基础绘制</a>
