增加锥形绘制

--- a/public/index.html
+++ b/public/index.html
@@ -62,6 +62,7 @@
     <a class="card" href="/paint">基础绘制</a>
     <a class="card" href="/view">坐标显示</a>
     <a class="card" href="/sky">背景图</a>
+    <a class="card" href="/tools">工具</a>
     <a class="card" href="/stallite">卫星</a>
   </div>
 </body>
