--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
         }
 
         .wrap div {
-            border: 1px solid #0099cc;
+            border: 1px solid #0dfcff;
             background-color: #ffffff;
         }
 
