--- a/public/index.html
+++ b/public/index.html
@@ -54,6 +54,7 @@
   <!-- <div id="cesium" style="width: 100vw;height: 100vh;"></div> -->
   <div id="app">
     <a class="card" href="/index">点</a>
+    <a class="card" href="/point">点【进阶】</a>
     <a class="card" href="/line">线条</a>
     <a class="card" href="/shape">形状</a>
     <a class="card" href="/paint">鼠标绘图</a>
