--- a/public/index.html
+++ b/public/index.html
@@ -1,8 +1,8 @@
 <!--
  * @Author: R10
  * @Date: 2022-05-31 15:41:36
- * @LastEditTime: 2022-06-13 14:30:20
- * @LastEditors: R10
+ * @LastEditTime: 2022-08-01 15:45:37
+ * @LastEditors: wengqi wengqi925@163.com
  * @Description: 
  * @FilePath: /gismap/public/index.html
 -->
@@ -56,6 +56,7 @@
     <a class="card" href="/index">点</a>
     <a class="card" href="/point">点【进阶】</a>
     <a class="card" href="/line">线条</a>
+    <a class="card" href="/line2">线条【进阶】</a>
     <a class="card" href="/shape">形状</a>
     <a class="card" href="/paint">鼠标绘图</a>
     <a class="card" href="/polyline">管线</a>
