1.tip 支持多位置设置；2.path 部分

--- a/public/index.html
+++ b/public/index.html
@@ -57,6 +57,7 @@
     <a class="card" href="/point">点【进阶】</a>
     <a class="card" href="/line">线条</a>
     <a class="card" href="/line2">线条【进阶】</a>
+    <a class="card" href="/path">路径 【路径播放】</a>
     <a class="card" href="/shape">形状</a>
     <a class="card" href="/paint">鼠标绘图</a>
     <a class="card" href="/polyline">管线</a>
