--- a/public/index.html
+++ b/public/index.html
@@ -70,6 +70,7 @@
     <a class="card" href="/stallite">卫星</a>
     <a class="card" href="/route">路线生成</a>
     <a class="card" href="/test">性能测试</a>
+    <a class="card" href="/map">矢量地图</a>
   </div>
 </body>
 
