--- a/public/index.html
+++ b/public/index.html
@@ -1,7 +1,7 @@
 <!--
  * @Author: R10
  * @Date: 2022-05-31 15:41:36
- * @LastEditTime: 2022-08-01 15:45:37
+ * @LastEditTime: 2022-11-04 11:39:22
  * @LastEditors: wengqi wengqi925@163.com
  * @Description: 
  * @FilePath: /gismap/public/index.html
@@ -71,6 +71,7 @@
     <a class="card" href="/route">路线生成</a>
     <a class="card" href="/test">性能测试</a>
     <a class="card" href="/map">矢量地图</a>
+    <a class="card" href="/model">模型控制</a>
   </div>
 </body>
 
